# dxm

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  rust-toolchain.toml  user-guide.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  cd.yml  ci.yml  publish-crate.yml  test.yml
.zed/: settings.json
crates/dxm/: Cargo.toml  README.md
crates/dxm-artifacts/: CHANGELOG.md  Cargo.toml  README.md
crates/dxm-artifacts/src/: api.rs  build.rs  cfx.rs  error.rs  github.rs  jg.rs  lib.rs  resolve.rs
crates/dxm-artifacts/src/api/: cfx.rs  github.rs  jg.rs
crates/dxm-artifacts/src/api/cfx/: artifacts.rs  changelogs.rs
crates/dxm-artifacts/src/cfx/: channel.rs  platform.rs
crates/dxm-artifacts/tests/: extract.rs  resolve.rs
crates/dxm-artifacts/tests/mocks/: mod.rs
crates/dxm-core/: CHANGELOG.md  Cargo.toml  README.md
crates/dxm-home/: CHANGELOG.md  Cargo.toml  README.md
crates/dxm-home/src/: env_path.rs  lib.rs  update.rs
crates/dxm-home/src/env_path/: env.sh  unix.rs  windows.rs
crates/dxm-home/src/update/: github.rs  platform.rs
crates/dxm-init/: CHANGELOG.md  Cargo.toml  README.md
crates/dxm-init/src/: defaults.rs  lib.rs  template.rs  vcs.rs
crates/dxm-init/templates/: README.md  permissions.cfg  resources.cfg  secrets.cfg  txData-config.json
crates/dxm-init/templates/base/data/: env.cfg  server.cfg
crates/dxm-init/templates/git/: .gitignore  README.md  data.gitignore
crates/dxm-init/tests/: init_server.rs  template.rs
crates/dxm-manifest/: CHANGELOG.md  Cargo.toml  README.md
crates/dxm-manifest/src/: artifact.rs  lib.rs  lockfile.rs  profile.rs  resource.rs  server.rs  sourcefile.rs  util.rs
crates/dxm-resources/: CHANGELOG.md  Cargo.toml  README.md
crates/dxm-resources/src/: download.rs  github.rs  lib.rs  patch.rs  resolve.rs
crates/dxm-resources/src/download/: archive.rs  git.rs
crates/dxm-resources/src/github/: api.rs
crates/dxm-resources/src/patch/: git_cli.rs
crates/dxm-resources/src/resolve/: git.rs  github.rs
crates/dxm-resources/src/resolve/github/: api.rs
scripts/: install.ps1  install.sh
src/: cfx.rs  commands.rs  context.rs  fs_utils.rs  home.rs  lib.rs  log.rs  main.rs  manifest.rs  server.rs  util.rs
src/cfx/: changelogs.rs
src/commands/: add.rs  artifact.rs  artifacts.rs  init.rs  install.rs  monitor.rs  new.rs  patch.rs  remove.rs  run.rs  self_cmd.rs  start.rs  update.rs
src/commands/artifact/: list.rs
src/commands/artifacts/: install.rs  list.rs  update.rs
src/commands/monitor/: install.rs  remove.rs
src/commands/patch/: commit.rs  prepare.rs  remove.rs
src/commands/self_cmd/: setup.rs  uninstall.rs  update.rs
src/context/: env.rs  paths.rs
src/context/env/: env.sh  unix.rs  windows.rs
src/manifest/: artifact.rs  server.rs
src/util/: artifacts.rs  fs.rs  init.rs  manifest.rs  path.rs  reqwest.rs  resources.rs  result.rs  toml.rs
