[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["David Malchin <malchin459@gmail.com>"]
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/D4isDAVID/dxm"
license = "MIT"
include = [
  "src",
  "CHANGELOG.md",
  "LICENSE",
  "README.md"
]

[workspace.dependencies]
clap = { version = "4.6.1", default-features = false, features = ["std", "help", "usage", "error-context", "cargo"] }
dirs = "6.0.0"
dxm-artifacts = { path = "./crates/dxm-artifacts", version = "0.3.0" }
dxm-home = { path = "./crates/dxm-home", version = "0.1.6" }
dxm-init = { path = "./crates/dxm-init", version = "0.3.0" }
dxm-manifest = { path = "./crates/dxm-manifest", version = "0.5.1" }
dxm-resources = { path = "./crates/dxm-resources", version = "0.3.0" }
fern = "0.7.1"
flate2 = "1.1.9"
fs-err = "3.3.0"
fs_extra = "1.3.0"
git2 = "0.20.4"
log = { version = "0.4.29", features = ["std"] }
reqwest = { version = "0.13.3", default-features = false, features = ["http2", "native-tls", "charset", "system-proxy", "blocking"] }
self-replace = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
tempfile = "3.27.0"
toml_edit = { version = "0.25.11", features = ["serde"] }
url = "2.5.8"
winreg = "0.56.0"
xz2 = "0.1.7"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[package]
name = "dxm"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI tool for managing FXServer artifacts & resources."
repository.workspace = true
license.workspace = true
keywords = ["fivem", "redm", "fxserver", "cfx", "citizenfx"]
categories = ["command-line-utilities"]
include.workspace = true

[dependencies]
clap.workspace = true
dxm-artifacts.workspace = true
dxm-home.workspace = true
dxm-init.workspace = true
dxm-manifest.workspace = true
dxm-resources.workspace = true
fern.workspace = true
log.workspace = true
reqwest.workspace = true

[profile.release]
opt-level = "z"
strip = "symbols"
lto = "fat"
codegen-units = 1
