[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["David Malchin <malchin459@gmail.com>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/D4isDAVID/dxm"
license = "MIT"
keywords = ["fivem", "redm", "fxserver", "cfx", "citizenfx"]
exclude = [
  "tests"
]

[workspace.dependencies]
dxm = { path = "./crates/dxm", version = "0.3.1" }
dxm-artifacts = { path = "./crates/dxm-artifacts", version = "0.3.0" }
dxm-core = { path = "./crates/dxm-core", version = "0.1.0" }
dxm-home = { path = "./crates/dxm-home", version = "0.1.6" }
dxm-init = { path = "./crates/dxm-init", version = "0.3.0" }
dxm-manifest = { path = "./crates/dxm-manifest", version = "0.5.1" }
dxm-resources = { path = "./crates/dxm-resources", version = "0.3.0" }
