[package]
name = "dxm-artifacts"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Crate for installing FXServer installations."
repository.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
fs-err.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tempfile.workspace = true
xz2.workspace = true
zip.workspace = true
