[package]
name = "dxm-artifacts"
version = "0.3.0"
description = "Download & install FXServer artifacts."
categories = ["web-programming::http-client"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
