[package]
name = "dxm-artifacts"
version = "0.3.0"
description = "Download & install FXServer artifacts."
categories = ["web-programming::http-client"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
async-compression = { workspace = true, features = ["xz-parallel"] }
async-tar.workspace = true
async_zip = { workspace = true, features = ["tokio", "deflate"] }
bytes.workspace = true
chrono.workspace = true
futures-core.workspace = true
futures-util.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
tracing.workspace = true

[dev-dependencies]
async-tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
wiremock.workspace = true
