[package]
name = "dxm-core"
version = "0.1.0"
description = "Manage FXServer artifacts & resources."
categories = ["filesystem", "web-programming::http-client"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
