[package]
name = "dxm-home"
version = "0.1.6"
description = "Manage dxm installations."
categories = ["filesystem", "web-programming::http-client"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
