[package]
name = "dxm-init"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Crate for initializing FXServer data directories."
repository.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
dxm-manifest.workspace = true
fs-err.workspace = true
git2.workspace = true
log.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
