[package]
name = "dxm-init"
version = "0.3.0"
description = "Basic templates for FXServer."
categories = ["filesystem"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
