[package]
name = "dxm-init"
version = "0.3.0"
description = "Create basic templates for FXServer."
categories = ["filesystem"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
