[package]
name = "dxm-resources"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Crate for installing third-party resources for FXServer."
repository.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
fs-err.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["json"] }
tempfile.workspace = true
zip.workspace = true
