[package]
name = "dxm-resources"
version = "0.3.0"
description = "Download & install third-party FXServer resources."
categories = ["web-programming::http-client"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
